test/compile_errors/err_issue155_called_comptime_error.w
//! expect-error: issue155 called function

fn foo() -> i32:
    comptime_error("issue155 called function")

fn main:
    let x = foo()
    print("{x}")
